# quiggler

./: .bumpversion.cfg  .editorconfig  .flake8  .gitchangelog.rc  .gitignore  Makefile  README.md  README.rst  pyproject.toml
client/: package-lock.json  package.json  webpack.config.js
client/aurelia_project/: aurelia.json
client/config/: environment.json  environment.production.json
client/src/: app.html  app.js  main.js  state.js  styles.scss
client/src/resources/: editor-actions.js  graph-utils.js  index.js
client/src/resources/elements/add-line/: actions.js  add-line.html  add-line.js
client/src/resources/elements/color-picker/: actions.js  color-picker.html  color-picker.js
client/src/resources/elements/connect/: actions.js  connect.html  connect.js
client/src/resources/elements/fabric-modal/: fabric-modal.html  fabric-modal.js
client/src/resources/elements/fabric-picker/: actions.js  fabric-picker.html  fabric-picker.js
client/src/resources/elements/home/: home.html  home.js
client/src/resources/elements/merge-faces/: actions.js  merge-faces.html  merge-faces.js
client/test/unit/actions/: add-line.spec.js  test-data.js
docs/source/: conf.py  index.rst
docs/source/topics/: introduction.rst
src/project/: settings.py  urls.py
src/quiggler/: apps.py  constants.py  graph_creation.py  models.py  serializers.py  urls.py  views.py
src/quiggler/migrations/: 0001_initial.py  0002_auto_20200510_0052.py  0003_auto_20200510_0104.py  0004_auto_20200510_1650.py  0005_quilt_public.py  0006_quilt_preview.py
tests/: __init__.py  test_package.py
(+21 files in other folders)
